# DiffOctree

./: CMakeLists.txt  diffusion.cpp  diffusion.h  main.cpp  octree.cpp  octree.h  point.h
include/: diffusion.h  octree.h  octree_iterator.h  point.h
src/: diffusion.cpp  octree.cpp
